# rp2040-temp-monitor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/commands/: end-work.md  start-work.md
.claude/review/: doc_review.md  principles.md  typo_check.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: docs.yml
diagrams/architecture/: gc_sections.puml  inter_core_data_flow.puml  layered_architecture.puml  linker_crt0_flow.puml  lma_vma_concept.puml  memory_layout.puml  rp2040_boot_sequence.puml  rp2040_memory_map.puml
docs/: conf.py  index.md
docs/common/: 00_overview.md  01_system_requirements.md  02_architecture.md  03_software_requirements.md  10_system_requirements.md  20_software_requirements.md  30_architecture.md  99_traceability.md
docs/common/adr/: 0001-integrated-adc-dma-driver.md  0002-inter-core-data-flow.md  0003-linker-script-conventions.md  index.md  template.md
docs/common/learning/: index.md  linker.md
docs/common/progress/: index.md  worklog.md
firmware-c/: .gitignore  Doxyfile  Makefile
firmware-c/.devcontainer/: Dockerfile  devcontainer.json
firmware-c/src/boot/: boot2_w25q080.S  rp2040_boot_regs.h
firmware-c/src/boot/boot2_helpers/: exit_from_boot2.S  read_flash_sreg.S  (+1 more)
firmware-c/src/linker/: rp2040.ld
firmware-c/tools/: generate_register_header.sh  pad_checksum.py
firmware-c/verify/: linker_probe.c
scripts/: collect_worklog.py  generate_gantt.py
